--- a/src/content/topics/home/securing-your-account/sso/okta.mdx
+++ b/src/content/topics/home/securing-your-account/sso/okta.mdx
@@ -50,7 +50,7 @@ If you have not configured SAML SSO for LaunchDarkly in Okta, you must do that f
 To authorize Okta to manage your LaunchDarkly users:
 
 1. Log in to Okta as an administrator.
-2. Navigate to **Applications** and click \*_Add Application_.\*
+2. Navigate to **Applications** and click \*_Browser App Catalog_.\*
 3. In the search bar, type "LaunchDarkly". The LaunchDarkly app appears in the search results.
 
 ![The Add Application screen with search results populating.](../../../../images/okta-ld-app.png)
